[gd_scene load_steps=5 format=2]

[ext_resource path="res://takable.gd" type="Script" id=1]
[ext_resource path="res://assets/statue_artemida.escn" type="PackedScene" id=2]
[ext_resource path="res://sound/environment/labyrinth_6_statue.ogg" type="AudioStream" id=3]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.115543, 0.435312, 0.0897023 )

[node name="statue_artemida" type="StaticBody" groups=[
"takables",
"restorable_state",
]]
script = ExtResource( 1 )
takable_id = 80

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0756919, -0.024052 )
shape = SubResource( 1 )

[node name="statue_artemida" parent="CollisionShape" instance=ExtResource( 2 )]

[node name="SoundPut" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 3 )
bus = "Sound"
