[gd_scene load_steps=4 format=2]

[ext_resource path="res://takable.gd" type="Script" id=1]
[ext_resource path="res://assets/statue_athena.escn" type="PackedScene" id=2]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.119904, 0.523496, 0.128359 )

[node name="statue_athena" type="StaticBody" groups=[
"restorable_state",
"takables",
]]
script = ExtResource( 1 )
takable_id = 130

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0443562, -0.0230083 )
shape = SubResource( 1 )

[node name="statue_athena" parent="CollisionShape" instance=ExtResource( 2 )]
