[gd_scene load_steps=4 format=2]

[ext_resource path="res://takable.gd" type="Script" id=1]
[ext_resource path="res://assets/statue_erida.escn" type="PackedScene" id=2]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.206168, 0.491802, 0.128595 )

[node name="statue_erida" type="StaticBody" groups=[
"restorable_state",
"takables",
]]
script = ExtResource( 1 )
takable_id = 70

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0582134, 0.00938258 )
shape = SubResource( 1 )

[node name="statue_erida" parent="CollisionShape" instance=ExtResource( 2 )]
